# krust

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew-tap.yml  release.yml
docs/: contributor-guide.md  operator-guide.md  status.md
src/cluster/: kube_provider.rs
src/ui/: app.rs  detail.rs
src/ui/app/: detail_pane.rs  render_loop.rs
