[package]
name = "krust"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Latency-first Kubernetes terminal navigator for multi-cluster operators"
readme = "README.md"
repository = "https://github.com/ErfanY/krust"
homepage = "https://github.com/ErfanY/krust"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["v1_33"] }
kube = { version = "3.0.1", features = ["runtime", "client", "rustls-tls"] }
kube-runtime = "3.0.1"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
